--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 </head>
 
 <body>
-    <h1>This's just test.</h1>
+
+    <header class="header">
+        <div class="content">
+            <div class="header__top">
+                <a class="brand" href="/">
+                    <img class="brand__logo" src="images/logo.svg" alt="logo">
+                    <span class="brand__corp">Волго-окская лесная компания НН</span>
+                </a>
+                <div class="corp-info">
+                    <div class="corp-info__top">
+                        <span>+7 (800) 201-90-59</span>
+                        <span>+7 (831) 414-91-94</span>
+                    </div>
+                    <div class="corp-info__bottom">
+                        <span>пн-вс, 8-18 (по МСК)</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
 
 </html>
