--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                     </div>
                 </div>
             </div>
+            <div class="header__content">
+                <div class="column">
+                    <h1 class="header__title">Поставляем качественный лес и пиломатериалы</h1>
+                    <span class="header__subtitle">В любых количествах точно в срок по РФ и на экспорт.</span>
+                    <a href="#" class="header__link button button_opacity">Каталог продукции</a>
+                </div>
+                <img class="header__image" src="images/header-image.png">
+            </div>
         </div>
     </header>
 
