--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="fonts/roboto/fonts.css">
     <link rel="stylesheet" href="css/normilize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Волго-окская лесная компания</title>
 </head>
 
@@ -31,10 +32,19 @@
                 </div>
             </div>
             <div class="header__content">
-                <div class="column">
+                <div class="header__column">
                     <h1 class="header__title">Поставляем качественный лес и пиломатериалы</h1>
                     <span class="header__subtitle">В любых количествах точно в срок по РФ и на экспорт.</span>
                     <a href="#" class="header__link button button_opacity">Каталог продукции</a>
+                    <div class="header__info corp-info">
+                        <div class="corp-info__top">
+                            <span>+7 (800) 201-90-59</span>
+                            <span>+7 (831) 414-91-94</span>
+                        </div>
+                        <div class="corp-info__bottom">
+                            <span>пн-вс, 8-18 (по МСК)</span>
+                        </div>
+                    </div>
                 </div>
                 <img class="header__image" src="images/header-image.png">
             </div>
