feat: add export block

--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="export content">
+            <div class="infoblock">
+                <h2 class="infoblock__title">Экспорт</h2>
+                <div class="infoblock__line"></div>
+            </div>
+            <div class="export__content">
+                <img class="export__image" src="images/airplane.jpg">
+                <form class="export__form form" action="POST">
+                    <h3 class="form__title">Доставим в Вашу страну!</h3>
+                    <span class="form__subtitle">Оставьте заявку в наш Экспортный отдел!</span>
+                    <span class="form__subtitle">Узнайте стоимость доставки до Вашей страны!</span>
+                    <label class="form__label" for="phone-number">Введите номер телефона</label>
+                    <input class="form__input" type="tel" name="phone-number" placeholder="+7 (999) 888-77-66">
+                    <label class="form__label" for="name">Ваше имя</label>
+                    <input class="form__input" type="text" name="name" placeholder="Иван">
+                    <input class="form__button button" type="submit" value="Отправить заявку">
+                </form>
+            </div>
+        </div>
     </main>
 
 </body>
