--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./favicon256.png" type="image/png">
     <link rel="stylesheet" href="fonts/roboto/fonts.css">
     <link rel="stylesheet" href="css/normilize.min.css">
     <link rel="stylesheet" href="css/style.css">
